--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,21 +3,32 @@ name: Build
 on:
   workflow_dispatch:
   workflow_run:
-    workflows: [sonarqube, dependency-check]
+    workflows: 
+      - SonarQube
+      - Dependency Check
     types:
       - completed
 
 jobs:
+  # Trabajo independiente inicial
+  validate:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Echo validation
+        run: echo "Starting validation job - this job has no dependencies."
+
+  # Trabajo principal: Build
   build:
     runs-on: ubuntu-latest
-    needs: [sonarqube, dependency-check]
+    needs: [validate] # Ahora depende del trabajo "validate"
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
       - name: Build with Maven
         run: mvn clean package
