--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,22 +1,19 @@
 name: Build
 
 on:
+  pull_request:
+    branches:
+      - feature/*
+      - develop
+      - main
   workflow_dispatch:
-  workflow_run:
-    workflows: 
-      - SonarQube
-      - dependency-check
-    types:
-      - completed
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    needs: [build, depchecktest]  # Asegúrate de que estos nombres coinciden exactamente con los nombres de los jobs
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -24,3 +21,8 @@ jobs:
           distribution: 'temurin'
       - name: Build with Maven
         run: mvn clean package
+      - name: Upload JAR Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: my-project-jar
+          path: target/*.jar
