--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -1,11 +1,11 @@
-name: dependency-check
+name: Dependency Check
 
 on:
   pull_request:
     branches: [ 'feature/*', 'develop', 'main' ]
 
 jobs:
-  depchecktest:
+  dependency-check:
     runs-on: ubuntu-latest
     name: depecheck_test
     steps:
