--- a/.github/workflows/buil_and_push_docker_imag.yaml
+++ b/.github/workflows/buil_and_push_docker_imag.yaml
@@ -14,12 +14,8 @@ jobs:
           distribution: 'temurin'
       - name: Build with Maven
         run: mvn clean package
-      - name: Get COMMIT
-        run: |
-          COMMIT=$(git rev-parse HEAD)
-        id: get_version
       - name: Get branch name
-        run: echo "::set-output name=branch::$(git rev-parse --abbrev-ref HEAD)"
+        run: echo "::set-output name=branch::$(echo ${{ github.ref_name }} | cut -d '/' -f 3)"
         id: get_branch
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -31,6 +27,6 @@ jobs:
         with:
           push: true
           tags: |
-            ricardoleon10/devsecops-assessment-ricardo:${{ steps.get_version.outputs.version }}-${{ steps.get_branch.outputs.branch }}
+            ricardoleon10/devsecops-assessment-ricardo:${{ steps.get_branch.outputs.branch }}
           file: ./Dockerfile
           context: .
