--- a/.github/workflows/buil_and_push_docker_imag.yaml
+++ b/.github/workflows/buil_and_push_docker_imag.yaml
@@ -2,31 +2,40 @@ name: Build and Push Docker Image
 
 on:
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: Build with Maven
         run: mvn clean package
-      - name: Get branch name
-        run: echo "::set-output name=branch::$(echo ${{ github.ref_name }} | cut -d '/' -f 3)"
-        id: get_branch
+
+      - name: Get branch name and project version
+        run: |
+          BRANCH=$(echo ${{ github.ref_name }} | cut -d '/' -f 3)
+          echo "::set-output name=branch::${BRANCH}"
+        id: get_info
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
+
       - name: Build and Push
         uses: docker/build-push-action@v3
         with:
           push: true
           tags: |
-            ricardoleon10/devsecops-assessment-ricardo:${{ steps.get_branch.outputs.branch }}
+            ricardoleon10/devsecops-assessment-ricardo:${{ steps.get_info.outputs.branch }}_${{ steps.get_info.outputs.version }}
           file: ./Dockerfile
           context: .
