se unifican los 3 workflows para que se ejecuten de manera ecalonada

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Pipeline CI
 
 on:
   pull_request:
@@ -32,4 +32,4 @@ jobs:
         with:
           token: ${{ secrets.TOKEN_GITHUB }}
           repository: ${{ github.repository }}
-          event-type: sonarqube 
+          event-type: sonarcloud_analysis
