se corrige el build-workflow

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,8 @@ name: Pipeline CI
 on:
   pull_request:
     branches:
-      - feature/* 
+      - feature/*
+  workflow_dispatch:
 
 jobs:
   build:
